added gas price checker added farm time checker

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ PVT_KEY=xxxxxxxxx
 
 # Loot&Rarity IDS, no spaces
 LOOT_IDS=123,123,123
+
+# Set Gas Threshold
+GAS_THRESHOLD=60
+
+# Set Gas multiplier (1.05 = 5% more gas, 1.10 = 10% more gas)
+GAS_MULTIPLIER=1.05
