--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@ethersproject/units": "^5.4.0",
+    "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.6"
   }
